# terraform-github-ayuspo

./: .gitignore  Cargo.toml  root.hcl
.artifacts/: repos.csv
.github/workflows/: apply-terragrunt.yaml  create-secrets.yaml  ghapptoken-release.yml  provider-ghapptoken-release.yml  update-repo-groups.yml
.pipeline/: generate-repo-csv.py  requirements-dev.txt  sync-config.py  update-repo-groups.py
ansible/: backend.tf  repos.hcl  terragrunt.hcl
aws/: backend.tf  repos.hcl
developed-applications/: backend.tf  repos.hcl  secrets.hcl  terragrunt.hcl
dynatrace/: backend.tf  repos.hcl
github-token-gen/: Cargo.toml  config.toml  repo-groups.toml
github-token-gen/src/: config.rs  fetch_token.rs  jwt.rs  main.rs
iac/: backend.tf
learnings/: backend.tf
legacy/: backend.tf  repos.hcl  terragrunt.hcl
legacy01/: .terraform.lock.hcl  backend.tf  provider.tf  repos.tf
misc/: repos.hcl
modules/github-repo/: main.tf  outputs.tf  variables.tf
ops/: repos.hcl  terragrunt.hcl
repo-aws/: terragrunt.hcl
repo-dynatrace/: terragrunt.hcl
repo-misc/: repos.hcl  terragrunt.hcl
repo-ops/: repos.hcl
repo-terraform/: repos.hcl
repo-web-development/: repos.hcl  terragrunt.hcl
rust-token-fetch/: Cargo.toml  config.toml  repo-groups.toml
rust-token-fetch/src/: config.rs  fetch_token.rs  jwt.rs  main.rs
scripts/: requirements-dev.txt  sync-config.py  update-repo-groups.py
terraform/: terragrunt.hcl
terraform-provider-ghapptoken/: go.mod  main.go
terraform-provider-ghapptoken/provider/: data_source_token.go  provider.go
(+8 files in other folders)
