[package]
name = "rust-token-fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"

# Enable blocking client for reqwest
reqwest = { version = "0.12", features = ["blocking", "json"] }
